# project_template

./: .gitignore  .travis.yml  README.md  cli.py  docker-compose.dev.yaml  dockerfile  environment.yaml  pyproject.toml  setup.py
bat/: cli.py  conf.py  server.py
bat/configuration/: manager.py
bat/configuration/sources/: file.py
bat/configuration/sources/tests/: env_test.py  file_test.py
bat/example/: __init__.py  cli.py
bat/example/tests/: example_test.py
bat/server/: cli.py
bat/tests/: cli_test.py  common_api_tests.py  conf_test.py
container_tests/: container_test.py
functional_tests/: service_test.py
k8/: bar-deployment.yml  foo-deployment.yml  ingress.yml  project-app.yml
project/: cli.py  conf.py
project/tests/: common_api_tests.py  conf_test.py
