# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=bat --cov-report html --cov-fail-under=100"

[tool.coverage.run]
omit = [
    # ignore coverage for these files
    "bat/_version.py",
    "bat/server.py",
    "bat/tests/common_api_tests.py",
]
